--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
     "youtube-transcript": "^1.2.1",
-    "youtube-transcript-plus": "^1.1.1"
+    "youtube-transcript-plus": "^1.1.1",
+    "youtubei.js": "^16.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
